[package]
name = "rpg_stage"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie", "typed-header"] }
base64 = "0.22.1"
bcrypt = "0.18.0"
chrono = "0.4.43"
config = "0.15.19"
ds-api = "0.1.0"
hex = "0.4.3"
rand = "0.10.0"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["serde", "v4"] }
validator = "0.20.0"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "json"]
